--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Julia Giebultowicz is a web developer based in Portland, Oregon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link
@@ -11,7 +12,7 @@
       rel="stylesheet"
     />
     <link href="src/style.css" rel="stylesheet" type="text/css" />
-    <title>Julia G</title>
+    <title>Julia Giebultowicz | Home</title>
   
   </head>
   <body>
@@ -79,7 +80,7 @@
 
         <div class="col-md-6 p-3">
           <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/368637" target="_blank">
-          <img src="images/avocado.png" alt="Avacado site" class="img-fluid rounded shadow">
+          <img src="images/avocado.png" alt="Avocado site" class="img-fluid rounded shadow">
           </a>
         </div>
         
